<resources>
    <string name="app_name">TextGames</string>

    <string name="first_item">First</string>
    <string name="second_item">Second</string>

    // Options menu
    <string name="choose_text">Choose source text</string>
    <string name="choose_style">Choose style</string>
    <string name="change_color">Change text color</string>
    <string name="change_font">Change text font</string>
    <string name="change_size">Change text size</string>

    <string name="bt_apply">Apply</string>

    // Spinners
    <string-array name="spinner_texts">
        <item>texts/novel.txt</item>
        <item>texts/raven.txt</item>
    </string-array>
    <string-array name="spinner_styles">
        <item>Big fat gothic black</item>
        <item>Just simple and normal</item>
        <item>Small tiny elvish blue</item>
    </string-array>
    <string-array name="spinner_colors">
        <item>Black</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="spinner_fonts">
        <item>font/andantino.ttf</item>
        <item>font/deutsch_gothic.ttf</item>
        <item>font/drpodecorru.ttf</item>
        <item>font/harlequinade.ttf</item>
        <item>font/runic.ttf</item>
        <item>font/rurintania.ttf</item>
        <item>font/victorian_gothic.ttf</item>
        <item>font/wooden.ttf</item>
    </string-array>
    <string-array name="spinner_size">
        <item>8</item>
        <item>12</item>
        <item>16</item>
        <item>24</item>
        <item>32</item>
        <item>42</item>
        <item>56</item>
    </string-array>
</resources>